src/components/snapshots/toppers__components__net__tests__net_graph_view.snap
---
source: src/components/net.rs
expression: terminal.backend()
---
"┌ NET: eth0 ───────────────────────────────────────────────┐"
"│4.8 MB/s│⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠁                    ┌──┐│"
"│        │                                             │TX││"
"│        │                                             │RX││"
"│        │                                             └──┘│"
"│        │                                                 │"
"│        │                                                 │"
"│        │                                                 │"
"│        │                                                 │"
"│2.4 MB/s│                                                 │"
"│        │                                                 │"
"│        │                                                 │"
"│        │                                                 │"
"│        │⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠄                        │"
"│        │                                                 │"
"│        │                                                 │"
"│        │                                                 │"
"│0       │                                                 │"
"│TX: 1.2 MB/s   RX: 4.8 MB/s   Esc: back                   │"
"└──────────────────────────────────────────────────────────┘"
