src/components/snapshots/toppers__components__net__tests__net_with_data.snap
---
source: src/components/net.rs
expression: terminal.backend()
---
"┌ NET ─────────────────────────────────────────────────────┐"
"│Iface                  TX            RX                   │"
"│eth0             1.2 MB/s      4.8 MB/s                   │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
